Fixed Authentication troubles Quick&Dirty
No need to also supply bearer-token for token regeneration.
